--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -120,7 +120,14 @@
         aria-label="{{ forloop.index }} {{ 'general.slider.of' | t }} {{ forloop.length }}"
         tabindex="-1"
       >
+      <script defer>
+        console.log({{block.settings.video | json}})
+      </script>
+
         <div class="slideshow__media banner__media media{% if block.settings.image == blank %} placeholder{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}">
+          {% if block.settings.video%}
+          {% endif %}
+          
           {%- if block.settings.image -%}
             {%- liquid
               assign height = block.settings.image.width | divided_by: block.settings.image.aspect_ratio | round
@@ -136,19 +143,8 @@
                 assign fetch_priority = 'high'
               endif
             -%}
-            {%- if forloop.first %}
-              {{
-                block.settings.image
-                | image_url: width: 3840
-                | image_tag: height: height, sizes: sizes, widths: widths, fetchpriority: fetch_priority
-              }}
-            {%- else -%}
-              {{
-                block.settings.image
-                | image_url: width: 3840
-                | image_tag: loading: 'lazy', height: height, sizes: sizes, widths: widths
-              }}
-            {%- endif -%}
+          
+
           {%- else -%}
             {%- assign placeholder_slide = forloop.index | modulo: 2 -%}
             {%- if placeholder_slide == 1 -%}
@@ -254,6 +250,8 @@
         </button>
       {%- endif -%}
     </div>
+
+    
   {%- endif -%}
 </slideshow-component>
 
@@ -399,6 +397,12 @@
           "id": "image",
           "label": "t:sections.slideshow.blocks.slide.settings.image.label"
         },
+        {
+          "type":"video",
+          "id":"video",
+          "label":"Video"
+        }
+        ,
         {
           "type": "inline_richtext",
           "id": "heading",
