--- a/assets/nav-header.css
+++ b/assets/nav-header.css
@@ -51,6 +51,10 @@ sticky-header.header-wrapper {
 }
 .forimage2 .mega_menu_img.slide {
   flex: 0 0 50%;
+  padding: 0 0 20px;
+}
+.forimage2 .swiper-wrapper {
+  gap: 15px;
 }
 / ==============crousel section=================== / div#MegaMenu-Content-7 {
   overflow: hidden;
