--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -369,13 +369,13 @@
                   >
                     <span>
                       {%- if card_product.selected_or_first_available_variant.available -%}
-                        {{- 'out-of-stock.svg' | inline_asset_content -}}
+                        {{- 'cartt.svg' | inline_asset_content -}}
                       {%- else -%}
-                        {{- 'out-of-stock.svg' | inline_asset_content -}}
+                        {{ 'products.product.sold_out' | t }}
                       {%- endif -%}
                     </span>
                     <span class="sold-out-message hidden">
-                      {{- 'out-of-stock.svg' | inline_asset_content -}}
+                      {{ 'products.product.sold_out' | t }}
                     </span>
                     {%- if horizontal_quick_add -%}
                       <span class="icon-wrap">
@@ -416,7 +416,7 @@
               {% endif %}
             </quick-add-bulk>
           {% else %}
-            <div class="quick-add no-js-hidden">
+            <div class="quick-add no-js-hidden sp-hover-cart">
               {%- liquid
                 assign product_form_id = 'quick-add-' | append: section_id | append: card_product.id
                 assign qty_rules = false
