--- a/assets/base.css
+++ b/assets/base.css
@@ -1,10 +1,7 @@
-@font-face {
-  font-family: "Roboto-Regular";
-  src: url('{{ "Roboto-Regular.woff2" | asset_url }}') format("woff2");
-  font-weight: normal;
-  font-style: normal;
+.open-filter,
+.button-label {
+  font-family: "KnockoutNo50", sans-serif;
 }
-
 body {
   font-family: "Roboto-Regular", sans-serif;
 }
@@ -1345,9 +1342,13 @@ button.shopify-payment-button__button--unbranded {
 .button-label,
 .shopify-challenge__button,
 .customer button {
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
-  line-height: calc(1 + 0.2 / var(--font-body-scale));
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: -0.2px;
+  text-transform: uppercase;
+  font-weight: 400;
+  color: #212121;
+  margin-right: 4px;
 }
 
 .button--tertiary {
