--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -1,3 +1,77 @@
+.sp-fliter .facets.facets-pill {
+  margin: 0 16px;
+}
+.sp-fliter span.facet-checkbox__text {
+  padding-left: 25px;
+}
+
+.sp-fliter .mobile-facets__highlight {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  right: 0px;
+  bottom: 0px;
+  display: block;
+  background-color: #f7f5ef;
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Hide the default checkbox */
+.sp-fliter .mobile-facets__checkbox {
+  display: none;
+}
+
+/* Create the toggle switch */
+.sp-fliter .mobile-facets__highlight {
+  position: relative;
+  display: inline-block;
+  width: 44px;
+  height: 26px;
+  background-color: #ccc;
+  border-radius: 34px;
+  transition: background-color 0.4s;
+  vertical-align: middle;
+  margin-right: 10px;
+  cursor: pointer;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+/* The circle inside the toggle */
+.sp-fliter .mobile-facets__highlight::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  border-radius: 50%;
+  transition: transform 0.4s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+/* Toggle ON state */
+.sp-fliter .mobile-facets__checkbox:checked + .mobile-facets__highlight {
+  background-color: black;
+}
+
+.sp-fliter
+  .mobile-facets__checkbox:checked
+  + .mobile-facets__highlight::before {
+  transform: translateX(20px);
+}
+
+.sp-fliter .mobile-facets__highlight {
+  position: absolute;
+  background-color: #f7f5ef;
+  opacity: 1;
+  visibility: visible;
+  z-index: 11;
+}
+
+/* Toggle end gfsdhgsdfgfdghsdfghfghgfhdfh*/
+
 .facets-container {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -630,10 +704,13 @@ span.active-facets__button-inner:after {
   align-items: center;
   display: flex;
   justify-content: center;
-  padding-top: 1.5rem;
 }
 
 .active-facets__button-wrapper * {
+  font-size: 1rem;
+}
+
+.sp-fliter .active-facets__button-wrapper * {
   font-size: 1rem;
 }
 
@@ -644,6 +721,10 @@ span.active-facets__button-inner:after {
 
   .active-facets__button-wrapper *,
   span.active-facets__button-inner {
+    font-size: 1.4rem;
+  }
+  .sp-fliter .active-facets__button-wrapper *,
+  .sp-fliter span.active-facets__button-inner {
     font-size: 1.4rem;
   }
 }
@@ -727,6 +808,9 @@ a.active-facets__button.focused .active-facets__button-inner {
     margin-top: 0.1rem;
     width: 1.2rem;
   }
+  .sp-fliter .active-facets__button .svg-wrapper {
+    margin-top: 0;
+  }
 }
 
 .active-facets facet-remove:only-child {
@@ -791,7 +875,21 @@ a.active-facets__button.focused .active-facets__button-inner {
   height: 100vh;
   z-index: 3;
 }
-sp-filter-open.mobile-facets__inner {
+.sp-fliter .mobile-facets__summary {
+  padding: 1.1rem 2.5rem;
+  border-bottom: 1px solid #d9d9d9;
+}
+.sp-fliter .menu-opening .mobile-facets__close {
+  margin: 10px;
+}
+.sp-fliter .mobile-facets__close:hover .svg-wrapper > svg {
+  transform: rotate(90deg);
+  transition: 0.5s ease;
+}
+.sp-fliter .mobile-facets__close .svg-wrapper > svg {
+  transition-duration: 0.4s;
+}
+.sp-fliter .sp-filter-open.mobile-facets__inner {
   max-width: 50rem;
 }
 .mobile-facets__inner {
@@ -822,7 +920,9 @@ sp-filter-open.mobile-facets__inner {
 .js .disclosure-has-popup:not(.menu-opening) .mobile-facets__inner {
   transform: translateX(105vw);
 }
-
+.sp-fliter .mobile-facets__header {
+  text-align: left;
+}
 .mobile-facets__header {
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
   padding: 1rem 2.5rem;
@@ -846,7 +946,15 @@ sp-filter-open.mobile-facets__inner {
   font-size: calc(var(--font-heading-scale) * 1.4rem);
   margin: 0;
 }
-
+.sp-fliter .mobile-facets__count {
+  display: none;
+}
+.sp-fliter .mobile-facets__heading {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: -1.2px;
+}
 .mobile-facets__count {
   color: rgba(var(--color-foreground), 0.7);
   font-size: 1.3rem;
