--- a/snippets/facets.liquid
+++ b/snippets/facets.liquid
@@ -466,7 +466,7 @@
         </span>
         <span tabindex="0" class="mobile-facets__close">
           <span class="svg-wrapper">
-            {{- 'icon-close.svg' | inline_asset_content -}}
+            {{- 'cross.svg' | inline_asset_content -}}
           </span>
         </span>
       </summary>
