--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -1,3 +1,45 @@
+.sp-card-inner .sp-btn-wrapper .quick-add__submit span {
+  display: inline-block;
+  height: 24px;
+  width: 24px;
+}
+.sp-card-inner {
+  overflow: hidden;
+}
+.sp-card-inner .sp-btn-wrapper .quick-add__submit {
+  padding: 1.25rem;
+  border-radius: 50%;
+  aspect-ratio: 1;
+  max-height: 32px;
+  align-items: center;
+  background: #f7f5ef;
+  transition: background-color 0.4s;
+  vertical-align: middle;
+  cursor: pointer;
+  box-shadow: inset 0 0 5px #0003;
+}
+
+.sp-btn-wrapper .button--secondary:after,
+.sp-btn-wrapper .button:not([disabled]):hover:after {
+  border-radius: 50%;
+  box-shadow: unset;
+}
+.sp-card-inner:hover .sp-btn-wrapper {
+  z-index: 1;
+  opacity: 1;
+  bottom: 0;
+}
+.sp-card-inner .sp-btn-wrapper {
+  position: absolute;
+  bottom: -100%;
+  right: 0;
+  display: flex;
+  gap: 10px;
+  padding: 0 10px;
+  z-index: -1;
+  opacity: 0;
+  transition: 0.5s;
+}
 .quick-add.sp-hover-cart {
   position: absolute;
 }
