--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -157,7 +157,7 @@
                   role="dialog"
                   aria-label="{{ 'products.product.choose_product_options' | t: product_name: card_product.title | escape }}"
                   aria-modal="true"
-                  class="testing...... quick-add-modal__content global-settings-popup"
+                  class="sp-quick-modal quick-add-modal__content global-settings-popup"
                   tabindex="-1"
                 >
                   <button
@@ -443,7 +443,7 @@
                   role="dialog"
                   aria-label="{{ 'products.product.choose_product_options' | t: product_name: card_product.title | escape }}"
                   aria-modal="true"
-                  class="testing....2 quick-add-modal__content global-settings-popup"
+                  class="quick-add-modal__content global-settings-popup"
                   tabindex="-1"
                 >
                   <button
