--- a/assets/base.css
+++ b/assets/base.css
@@ -1999,7 +1999,30 @@ input[type="checkbox"] {
   -webkit-appearance: none;
   appearance: none;
 }
-
+.sp-quick-view-container quick-add-modal .sp-quick-modal .quantity__button {
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin: auto;
+  box-shadow: 0px 1px 5px 1px #a9a9a9;
+}
+.sp-quick-view-container
+  quick-add-modal
+  .sp-quick-modal
+  .quantity__button:focus-visible,
+.sp-quick-view-container
+  quick-add-modal
+  .sp-quick-modal
+  .quantity__input:focus-visible,
+.sp-quick-view-container quick-add-modal .sp-quick-modal .quantity__button {
+  margin: 10px 15px;
+  border-radius: 30px;
+  outline: none;
+}
+.quantity {
+  width: 100%;
+  max-width: 160px;
+}
 .quantity__button {
   width: calc(4.5rem / var(--font-body-scale));
   flex-shrink: 0;
