--- a/assets/base.css
+++ b/assets/base.css
@@ -1,3 +1,18 @@
+.sp-card-wrapper .card__content .quick-add {
+  display: none;
+}
+product-slider.product-card-slider.sp-card-slider .full-unstyled-link {
+  display: inline;
+}
+product-slider.product-card-slider {
+  width: 100%;
+  height: 100%;
+}
+product-slider.product-card-slider img.motion-reduce {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 .open-filter,
 .button-label {
   font-family: "KnockoutNo50", sans-serif;
