--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -287,6 +287,25 @@
 
         {% if product_card_slider and card_product.media.size > 1 %}
             <product-slider class="product-card-slider sp-card-slider">
+              <div class="card__content sp-card_content">
+                <div class="testing.....3 card__badge {{ settings.badge_position }}">
+                  {%- if card_product.available == false -%}
+                    <span
+                      id="NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
+                      class="badge badge--bottom-left color-{{ settings.sold_out_badge_color_scheme }}"
+                    >
+                      {{- 'products.product.sold_out' | t -}}
+                    </span>
+                  {%- elsif card_product.compare_at_price > card_product.price and card_product.available -%}
+                    <span
+                      id="NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
+                      class="badge badge--bottom-left color-{{ settings.sale_badge_color_scheme }}"
+                    >
+                      {{- 'products.product.on_sale' | t -}}
+                    </span>
+                  {%- endif -%}
+                </div>
+              </div>
               <a
                 href="{{ card_product.url }}"
                 id="StandardCardNoMediaLink-{{ section_id }}-{{ card_product.id }}"
@@ -432,23 +451,6 @@
                 {{ card_product.title | escape }}
               </a>
             </h3>
-          </div>
-          <div class="card__badge {{ settings.badge_position }}">
-            {%- if card_product.available == false -%}
-              <span
-                id="NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
-                class="badge badge--bottom-left color-{{ settings.sold_out_badge_color_scheme }}"
-              >
-                {{- 'products.product.sold_out' | t -}}
-              </span>
-            {%- elsif card_product.compare_at_price > card_product.price and card_product.available -%}
-              <span
-                id="NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
-                class="badge badge--bottom-left color-{{ settings.sale_badge_color_scheme }}"
-              >
-                {{- 'products.product.on_sale' | t -}}
-              </span>
-            {%- endif -%}
           </div>
         </div>
       </div>
@@ -857,7 +859,7 @@
             </div>
           {% endif %}
         {% endif %}
-        <div class="card__badge {{ settings.badge_position }}">
+        <div class="testing....2 card__badge {{ settings.badge_position }}">
           {%- if card_product.available == false -%}
             <span
               id="Badge-{{ section_id }}-{{ card_product.id }}"
